--- a/BWReportLibrary/src/main/res/values/colors.xml
+++ b/BWReportLibrary/src/main/res/values/colors.xml
@@ -16,4 +16,16 @@
     <color name="blackish">#2d2c2c</color>
     <color name="checkbox_color">#ff0000</color>
 
+    <color name="black">#000000</color>
+    <color name="blue_color_picker">#0066FF</color>
+    <color name="brown_color_picker">#AF593E</color>
+    <color name="green_color_picker">#01A368</color>
+    <color name="orange_color_picker">#FF861F</color>
+    <color name="red_color_picker">#FF0000</color>
+    <color name="red_orange_color_picker">#FF3F34</color>
+    <color name="sky_blue_color_picker">#76D7EA</color>
+    <color name="violet_color_picker">#8359A3</color>
+    <color name="yellow_color_picker">#FBE870</color>
+    <color name="yellow_green_color_picker">#C5E17A</color>
+
 </resources>
