--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#F44336</color>
-    <color name="colorAccent">#020202</color>
+    <color name="colorAccent">#FF9800</color>
 </resources>
