- FIP issue icons not perfectly visible and some functionality not working

--- a/BWReportLibrary/src/main/res/layout/activity_photo_editor.xml
+++ b/BWReportLibrary/src/main/res/layout/activity_photo_editor.xml
@@ -60,6 +60,7 @@
                 android:padding="10dp"
                 android:shadowColor="#000000"
                 android:shadowDx="1"
+                android:background="@drawable/black_bg"
                 android:shadowDy="1"
                 android:shadowRadius="2"
                 android:text="@string/done"
@@ -80,6 +81,7 @@
                 android:shadowDx="1"
                 android:shadowDy="1"
                 android:shadowRadius="2"
+                android:background="@drawable/black_bg"
                 android:text="@string/erase"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
